# isolinear

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mise.toml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.zed/: settings.json
docs/: USER_STORIES.md  architecture.md  browsing.md  connecting.md  contributing.md  index.md  installation.md  keyboard.md  security.md  themes.md
docs/redesign/: capture.py  render_mockups.py
docs/stylesheets/: extra.css
examples/: databricks.yml
src/dbxvault/: app.py  styles.tcss
src/dbxvault/core/: __init__.py  auth.py  cache.py  gateway.py
src/dbxvault/ui/: modals.py  theme.py  widgets.py
src/dbxvault/ui/screens/: login.py  main.py
src/isolinear/: app.py  styles.tcss
src/isolinear/application/: __init__.py  dotenv.py  onboarding.py  read_model.py  workspace.py
src/isolinear/domain/: __init__.py  models.py  permissions.py  ports.py  secret_store.py
src/isolinear/infrastructure/: __init__.py  bundle.py  connector.py  databricks.py  profiles.py  settings.py
src/isolinear/interface/: modals.py  sorting.py  theme.py  widgets.py
src/isolinear/interface/screens/: login.py  main.py
src/keystone/: app.py  styles.tcss
src/keystone/application/: __init__.py  read_model.py
src/keystone/core/: auth.py  config.py  gateway.py  models.py  session.py
src/keystone/domain/: __init__.py  errors.py  host.py  models.py  permissions.py  ports.py
src/keystone/infrastructure/: __init__.py  config.py  databricks.py  profiles.py
src/keystone/interface/: modals.py  theme.py  widgets.py
src/keystone/interface/screens/: login.py  main.py
src/keystone/ui/: modals.py  widgets.py
src/keystone/ui/screens/: login.py  main.py
tests/: conftest.py  fakes.py  test_auth.py  test_bundle.py  test_cache.py  test_config.py  test_databricks.py  test_dotenv.py  test_gateway.py  test_help.py  test_host.py  test_models.py  test_permissions.py  test_profiles.py  test_session.py  test_settings.py  test_snapshots.py  test_sorting.py  test_ui_browse.py  test_ui_login.py  test_ui_modals.py  test_ui_permissions.py  test_ui_scope_filter.py  test_ui_tools.py
tests/__snapshots__/test_snapshots/: test_audit_screen.raw  test_browse_screen.raw  test_login_empty_state.raw
