[project]
name = "keystone"
version = "0.1.0"
description = "Keystone — a terminal Databricks secret manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.86",
    "databricks-sdk>=0.30",
]

[project.scripts]
keystone = "keystone.app:main"
ks = "keystone.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keystone"]

[dependency-groups]
dev = [
    "textual-dev>=1.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 90
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
