[project]
name = "isolinear"
version = "0.2.5"
description = "A keyboard-driven terminal UI for managing Databricks secrets"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Misja Pronk", email = "misja@prorexconsultancy.nl" }]
keywords = [
    "databricks",
    "secrets",
    "secret-manager",
    "tui",
    "terminal",
    "textual",
    "cli",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "textual>=2.0",
    "databricks-sdk>=0.30",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/misja-pronk/isolinear"
Repository = "https://github.com/misja-pronk/isolinear"
Issues = "https://github.com/misja-pronk/isolinear/issues"
Changelog = "https://github.com/misja-pronk/isolinear/blob/main/CHANGELOG.md"

[project.scripts]
isolinear = "isolinear.app:main"
iso = "isolinear.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/isolinear"]

[dependency-groups]
dev = [
    "textual-dev>=1.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "types-pyyaml>=6.0.12.20260518",
]
docs = [
    "mkdocs-material>=9.7.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 90
target-version = "py311"
src = ["src", "tests"]

[tool.ty.environment]
python-version = "3.11"
root = ["src"]
# tests import sibling modules (e.g. `fakes`) the way pytest runs them
extra-paths = ["tests"]

[tool.ty.src]
# docs/redesign holds mockup-rendering scripts that use an out-of-project lib
# (Pillow, via `uv run --with`); they aren't shipped code, so don't type-check them.
exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
